Use Stream#toList()