@@ -1,6 +1,5 @@
 package tfb.status.util;
 
-import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -153,7 +152,7 @@ public final class PathPatternTest {
         List.of(d, c, b, a)
             .stream()
             .sorted(PathPattern.SPECIFICITY_COMPARATOR)
-            .collect(toList()));
+            .toList());
   }
 
   /**
